# Nine-Men-s-Morris

client/cpp/: CMakeLists.txt  log.txt  run.sh
client/cpp/client/: CMakeLists.txt
client/cpp/client/src/: AIPlayer.cpp  AIPlayer.h  client.cpp  client.h  game.cpp  game.h  player.cpp  player.h
client/matlab/: player.m
client/python/: aiplayer.py  app.py  game.py  player.py  requirements.txt
server/: windmill.html
server/javascripts/: windmill.js
server/javascripts/players/: w-human.js  w-network.js
source/: angularjs-ajax.js  google-fonts.css  underscore-min.js
